# django-knowledge

./: .gitignore  requirements.txt  setup.cfg  setup.py
knowledge/: __init__.py  apps.py  managers.py  models.py  signals.py  utils.py  views.py
knowledge/migrations/: 0001_initial.py
knowledge/templatetags/: knowledge_tags.py
tests/: runtests.sh  settings.py  urls.py
tests/mock/tests/: test_forms.py  test_managers.py  test_models.py  test_settings.py  test_templatetags.py  test_utils.py  test_views.py
