[metadata]
name = django-knowledge
description = A simple frontend and admin interface for dealing with help knowledge tickets and issues, including public and private responses and searching.
version = 0.2.0
author = Bryan Helmig
author_email = bryan@zapier.com
url = http://github.com/zapier/django-knowledge
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Utilities

[options]
install_requires = 
    Markdown>=2.1.1
    Django>=1.10
packages = knowledge
include_package_data = true
